--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
   "autoload": {
     "psr-4": {
       "Bektas\\Cart\\": "src"
-    }
+    },
+    "files": [
+      "helpers/cartHelper.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
